feat: update to 1.20.4 (#1035)
* chore: update workflow file

* feat: update code

* chore: fix versions of deps

* chore: various fixes

* fix: networking

* fix: registries

* fix: api

* fix: message imports

* fix: capabilities

* fix: integrations

* fix: various fixes

* fix: spirit fire and torches

* fix: recipes

* fix: capability use

* fix: various fixes

* fix: various fixes

* fix: ui

* fix: various fixes

* fix: various fixes

* fix: first successful build

* fix: first successful start - crashes due to curios being oudated vs neo

* fix: disable curious until updated

* chore: add runs to gitignore

* fix: accidentally registered theurgy networking

* fix: enable custom torches using a particle supplier

* fix: nbt init crash

* fix: was using theurgy message handler ...

* chore: fix ignore list

* fix: recipe deserialization

* fix: entity rider location

* fix: conditions, other data

* fix: entity loot tables

* fix: chimera jump

* feat: enable jei

* feat: update to neo screen changes

* chore: update to latest theurgy

* chore: set theurgy version range

* fix: crushing recipe provider conditions

* fix: network coded for crushing recipe

* chore: resolve todo comments